# studio

./: .gitignore  0000-sketch.ipynb  0001-dalle-mini.ipynb  0001-dalle.ipynb  Cargo.toml  README.md  dalle-mini-util.ipynb  random_resnet.py  sketch.ipynb  tixy.py
0000-sketch/: pyproject.toml  sketch.ipynb  tixy.py
0000-sketch/src/sketch/: __init__.py  tixy.py
0001-dalle-mini-util/src/dalle_mini_util/: __init__.py
dalle-mini-util/src/dalle_mini_util/: __init__.py
src/: cairo_util.rs  clock.rs  lib.rs  main.rs  tixy.rs
