[package]
name = "studio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.14", features = ["pdf", "png", "ps", "svg"] }
num-complex = "0.4"
num-traits = "0.2"
rand = "0.8"
base64 = "0.13"