[project]
name = "sketch"
version = "0.0.1"
authors = [
  { name="Madison Brooks", email="maddie@0xmaddie.page" },
]
description = "A sketchbook for code."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "pycairo",
  "numpy",
  "scipy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"